@@ -22,6 +22,8 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
 - now you can define the default cell style
 - Autoscroll while selecting now also available for columns and row headers
 - When cell is too short, then the content is now available in the tooltip
+- added OpenCalc export and import filter
+- Drag 'n' Drop of selections
 
 
 New functions:
